--- a/Home.html
+++ b/Home.html
@@ -23,7 +23,7 @@
 
     <!--Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark" id="home">
-        <a href="#home" class="navbar-brand pl-5"><img src="Photo/1x/Logo.png" alt=""></a>
+        <a href="Home.html" class="navbar-brand pl-5"><img src="Photo/1x/Logo.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-control="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item px-3 active">
-                    <a href="#home" class="nav-link">Home <span class="sr-only">(current)</span></a>
+                    <a href="Home.html" class="nav-link">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item px-3">
                     <a href="#team" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item px-3">
-                    <a href="#" class="nav-link">Design</a>
+                    <a href="Design.html" class="nav-link">Design</a>
                 </li>
                 <li class="nav-item px-3">
                     <a href="#contact" class="nav-link">Contact Us</a>
@@ -94,6 +94,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                	 <a href="Design.html">
                     <div class="card">
                         <div class="card-body">
                             <img src="Photo/1x/Car Modify.png" alt="" class="img-fluid w-90 mb-5">
