modify Design page

--- a/Design.html
+++ b/Design.html
@@ -48,7 +48,7 @@
 
      <section class="row">
       <div class="col-md-6 col-sm-12 col-xs-12 col-xxs-12">
-        <a href="Company.html">
+        <a href="Company.php">
           <div class="Design-tile">
             <img width="300" height="300" src="Photo/evo-4.png" alt="Company Designs Image">
             <span>Evolution Designs</span>
@@ -56,7 +56,7 @@
         </a>
       </div>
       <div class="col-md-6 col-sm-12 col-xs-12 col-xxs-12">
-        <a href="Custom.html">
+        <a href="Custom.php">
           <div class="Design-tile">
             <img width="300" height="300" src="Photo/ek3.jpg" alt="Custom Designs Image">
             <span>Custom Designs</span>
